src/benchflow/assets/bootstrap/operators/gpu/cluster-policy.yaml
apiVersion: nvidia.com/v1
kind: ClusterPolicy
metadata:
  name: gpu-cluster-policy
spec:
  cdi:
    default: false
    enabled: true
  daemonsets:
    rollingUpdate:
      maxUnavailable: "1"
    updateStrategy: RollingUpdate
  dcgm:
    enabled: true
  dcgmExporter:
    enabled: true
    serviceMonitor:
      enabled: true
  devicePlugin:
    enabled: true
    mps:
      root: /run/nvidia/mps
  driver:
    enabled: true
    kernelModuleType: auto
    licensingConfig:
      nlsEnabled: true
      secretName: ""
    upgradePolicy:
      autoUpgrade: true
      drain:
        deleteEmptyDir: false
        enable: false
        force: false
        timeoutSeconds: 300
      maxParallelUpgrades: 1
      maxUnavailable: 25%
      podDeletion:
        deleteEmptyDir: false
        force: false
        timeoutSeconds: 300
      waitForCompletion:
        timeoutSeconds: 0
    useNvidiaDriverCRD: false
  gfd:
    enabled: true
  mig:
    strategy: single
  migManager:
    enabled: true
    config:
      default: all-disabled
      name: default-mig-parted-config
  nodeStatusExporter:
    enabled: false
  operator:
    defaultRuntime: crio
    runtimeClass: nvidia
    use_ocp_driver_toolkit: true
  sandboxDevicePlugin:
    enabled: true
  sandboxWorkloads:
    defaultWorkload: container
    enabled: false
  toolkit:
    enabled: true
  nodeStatusExporter:
    enabled: true
